Added: First Commit

--- a/app/src/main/res/layout/activity_match_screen.xml
+++ b/app/src/main/res/layout/activity_match_screen.xml
@@ -11,9 +11,9 @@
             android:id="@+id/screenHeadingTV"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
+            android:text="Matches"
             app:layout_constraintEnd_toEndOf="parent"
-            android:text="Points Table "
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <include
@@ -54,12 +54,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            app:layout_constraintEnd_toEndOf="parent"
             android:paddingBottom="24dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/screenHeadingTV"
-            tools:listitem="@layout/item_player_with_point_card" />
+            tools:listitem="@layout/item_matches_card" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
